Mithrilに追加した機能のメニュー追加

--- a/mithril_test/index.html
+++ b/mithril_test/index.html
@@ -7,9 +7,11 @@
  </head>
  <body>
   <ul>
-   <li><a href="01-tab1/">タブ</a></li>
-   <li><a href="02-fileInfo/">ファイル情報</a></li>
-   <li><a href="03-address/">アドレス帳</a></li>
+   <li><a href="01-tab1">タブ</a></li>
+   <li><a href="02-fileInfo">ファイル情報</a></li>
+   <li><a href="03-address">アドレス帳</a></li>
+   <li><a href="04-add">足し算</a></li>
+   <li><a href="05-fileView">画像表示</a></li>
   </ul>
  </body>
 </html>
