--- a/canvas_test/paint.html
+++ b/canvas_test/paint.html
@@ -10,6 +10,7 @@
    }
    #canvas {
       border: 1px solid #000;
+      cursor: pointer;
    }
   </style>
  </head>
@@ -47,10 +48,9 @@
    </div>
    <canvas id="canvas" width="600" height="400"></canvas>
   </div>
-  <script src="elt.js"></script>
   <script src="painter.js"></script>
   <script>
-   initPainter();
+//   initPainter();
   </script>
  </body>
 </html>
