--- a/VueTest/index.html
+++ b/VueTest/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <div id="app">
-   {{ date }}
+   {{ hoge }}
   </div>
   <script src="https://unpkg.com/vue"></script>
   <script src="js/main.js"></script>
